# a35-1

./: .clang-format  .gitignore  CMakeLists.txt  module  module.c  module.h  poc  poc.c  poc.h  poc1.patch  poc2.patch
.cache/clangd/index/: ioctl_codes.h.0853744933CA9FF6.idx  module.h.674864338A4FF5C9.idx  poc.c.7BFCAE34DB92E842.idx  poc.h.D1D2A5FC68DF1904.idx  size.c.90DF867FF8407BC4.idx
POC/: header.h  main.c  poc.c  size.c
include/: ioctl_codes.h  module.h  poc.h
src/io/: io_thread.c
